- added flexible logging system
- fixed removing of subcircuits from component list
- removed: delete subcircuit with the delete key
    - can be readded as a feature
- fix to allow changing the name of an external connector
- fixed graphical glitches with external components; caused by a painter used for taking font metrics
- fixed use-after free crash in ECSRFlipFlop::inStateChanged(), when SR flipflops are added and removed subsequenctly to a circuit
- fixed possible graphical glitches on color selecting widget
- fixed crash when closing ktechlab with probes placed on a circuit
- fixed button for inserting DrawParts (text, arrow, rectangle, etc.) in circuits and in flowcode
- fixed pressing cancel in the new.. dialog; now it does work
- fixed with a hard-coded limit: I think the 'scope just keeps filling data points into RAM,
    because RAM usage climbs steadily until the virtual machine crashes (same as the kde3 version)
    - would be useful to set a reasonable limit for the data points, initially hardcoded, to be made configurable in the future
    - for now limit is hard-coded, the probe data flats-out when limit is reached; memory usage does not increase to infinity
- fixed crash on File -> Quit
- fixed some missing icons: attach blockdevice cancel contents exec fileclose fileopen filesave log reload source source_c
    stop view_bottom view_right window_new
    button_cancel down fileexport pencil player_pause player_play project_open rotate rotate_ccw rotate_cw
    editdelete
    text_block     text_center     text_left     text_right     text_sub     text_super
    align_horizontally -> align-horizontal-center (oxygen)
    align_vertically -> align-vertical-center (oxygen)
    distribute_horizontally -> distribute-horizontal-x (oxygen)
    distribute_vertically -> distribute-vertical-y (oxygen)
    file_export_image -> document-export
    fileimport -> document-import
    imagegallery -> insert-image