@@ -111,9 +111,10 @@ Fixes needed for the first release candidate of the Qt4 port
 - fix missing icons:
     - some icons are distributed inside the kde3 icons; find them there and install them under ktechlab icons
     ktechlab_mechanics (?)
-    launch
     null (?)
-    paintbrush
-    rightjust
     routing_mode_auto
     routing_mode_manual
+
+- minimize the number of bundled 3rd party icons; most should be usable from Oxygen icon theme
+
+- when creating new project, ok/cancel does not work
